--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
@@ -18,6 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+package-lock.json
+package.json
 
 npm-debug.log*
 yarn-debug.log*
