--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-package-lock.json
-package.json
+/package-lock.json
+/package.json
 
 npm-debug.log*
 yarn-debug.log*
