--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /config
 /.pnp
 .pnp.js
+*.package-lock.json
+*.package.json
 
 
 # testing
@@ -19,8 +21,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.package-lock.json
-.package.json
+
 
 npm-debug.log*
 yarn-debug.log*
