--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -10,6 +10,8 @@
     "classnames": "^2.2.6",
     "connect": "^3.7.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "plaid": "^4.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
