--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -10,16 +10,20 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "connect": "^3.7.0",
+    "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "mongoose": "^5.9.1",
     "plaid": "^4.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-plaid-link-button": "0.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5002",
   "eslintConfig": {
     "extends": "react-app"
   },
