--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -12,9 +12,11 @@
     "connect": "^3.7.0",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "mongoose": "^5.9.1",
     "plaid": "^4.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-plaid-link-button": "0.0.4",
