--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-plaid-link": "^1.5.1",
     "react-plaid-link-button": "0.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
