--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "connect": "^3.7.0",
     "is-empty": "^1.2.0",
@@ -18,6 +19,7 @@
     "plaid": "^4.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-plaid-link": "^1.5.1",
     "react-plaid-link-button": "0.0.4",
