--- a/client/budget-app/package.json
+++ b/client/budget-app/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "connect": "^3.7.0",
+    "emotion": "^10.0.27",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "material-table": "^1.57.2",
